k8s/demo-app/frontend/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 8000
      targetPort: 80
