k8s/demo-app/frontend/np-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
  namespace: demo-app
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # allow access from ingress
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: d8-ingress-nginx
          podSelector:
            matchLabels:
              app: controller
      ports:
        - protocol: TCP
          port: 80
    # allow access from healthcheck agent
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: d8-service-with-healthchecks
          podSelector:
            matchLabels:
              app: agent
      ports:
        - protocol: TCP
          port: 80
          # - from:
          #     - podSelector:
          #         matchLabels:
          #           app: backend
          #   ports:
          #     - protocol: TCP
          #       port: 80
  egress:
    # allow access to cluster DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
    # allow access to outside to download packages and app sources
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
